@@ -1,10 +1,12 @@
 #!/usr/bin/python -u
 #
-# This example is a simple "echo" bot
+# This example is a simple "echo" bot.
 #
 # After connecting to a jabber server it will echo messages, and accept any
 # presence subscriptions. This bot has basic Disco support (implemented in
 # pyxmpp.jabber.client.Client class) and jabber:iq:vesion.
+#
+# This version use older, but still supported PyXMPP API
 
 import sys
 import logging
@@ -13,43 +15,68 @@ import codecs
 
 from pyxmpp.all import JID,Iq,Presence,Message,StreamError
 from pyxmpp.jabber.client import JabberClient
-from pyxmpp.interface import implements
-from pyxmpp.interfaces import *
 
-class EchoHandler(object):
-    """Provides the actual 'echo' functionality.
+class Client(JabberClient):
+    """Simple bot (client) example. Uses `pyxmpp.jabber.client.JabberClient`
+    class as base. That class provides basic stream setup (including
+    authentication) and Service Discovery server. It also does server address
+    and port discovery based on the JID provided."""
 
-    Handlers for presence and message stanzas are implemented here.
-    """
+    def __init__(self, jid, password):
 
-    implements(IMessageHandlersProvider, IPresenceHandlersProvider)
-    
-    def __init__(self, client):
-        """Just remember who created this."""
-        self.client = client
-    
-    def get_message_handlers(self):
-        """Return list of (message_type, message_handler) tuples.
+        # if bare JID is provided add a resource -- it is required
+        if not jid.resource:
+            jid=JID(jid.node, jid.domain, "Echobot")
 
-        The handlers returned will be called when matching message is received
-        in a client session."""
-        return [
-            ("normal", self.message),
-            ]
+        # setup client with provided connection information
+        # and identity data
+        JabberClient.__init__(self, jid, password,
+                disco_name="PyXMPP example: echo bot", disco_type="bot")
 
-    def get_presence_handlers(self):
-        """Return list of (presence_type, presence_handler) tuples.
+        # register features to be announced via Service Discovery
+        self.disco_info.add_feature("jabber:iq:version")
 
-        The handlers returned will be called when matching presence stanza is
-        received in a client session."""
-        return [
-            (None, self.presence),
-            ("unavailable", self.presence),
-            ("subscribe", self.presence_control),
-            ("subscribed", self.presence_control),
-            ("unsubscribe", self.presence_control),
-            ("unsubscribed", self.presence_control),
-            ]
+    def stream_state_changed(self,state,arg):
+        """This one is called when the state of stream connecting the component
+        to a server changes. This will usually be used to let the user
+        know what is going on."""
+        print "*** State changed: %s %r ***" % (state,arg)
+
+    def session_started(self):
+        """This is called when the IM session is successfully started
+        (after all the neccessery negotiations, authentication and
+        authorizasion).
+        That is the best place to setup various handlers for the stream.
+        Do not forget about calling the session_started() method of the base
+        class!"""
+        JabberClient.session_started(self)
+
+        # set up handlers for supported <iq/> queries
+        self.stream.set_iq_get_handler("query","jabber:iq:version",self.get_version)
+
+        # set up handlers for <presence/> stanzas
+        self.stream.set_presence_handler(None, self.presence)
+        self.stream.set_presence_handler("unavailable", self.presence)
+        self.stream.set_presence_handler("subscribe", self.presence_control)
+        self.stream.set_presence_handler("subscribed", self.presence_control)
+        self.stream.set_presence_handler("unsubscribe", self.presence_control)
+        self.stream.set_presence_handler("unsubscribed", self.presence_control)
+
+        # set up handler for <message stanza>
+        self.stream.set_message_handler("normal",self.message)
+
+    def get_version(self,iq):
+        """Handler for jabber:iq:version queries.
+
+        jabber:iq:version queries are not supported directly by PyXMPP, so the
+        XML node is accessed directly through the libxml2 API.  This should be
+        used very carefully!"""
+        iq=iq.make_result_response()
+        q=iq.new_query("jabber:iq:version")
+        q.newTextChild(q.ns(),"name","Echo component")
+        q.newTextChild(q.ns(),"version","1.0")
+        self.stream.send(iq)
+        return True
 
     def message(self,stanza):
         """Message handler for the component.
@@ -84,10 +111,11 @@ class EchoHandler(object):
             stanza_type=stanza.get_type(),
             subject=subject,
             body=body)
+        self.stream.send(m)
         if body:
-            p = Presence(status=body)
-            return [m, p]
-        return m
+            p=Presence(status=body)
+            self.stream.send(p)
+        return True
 
     def presence(self,stanza):
         """Handle 'available' (without 'type') and 'unavailable' <presence/>."""
@@ -122,77 +150,9 @@ class EchoHandler(object):
             msg+=u" has canceled our subscription of his presence."
 
         print msg
-
-        return stanza.make_accept_response()
-
-
-class VersionHandler(object):
-    """Provides handler for a version query.
-    
-    This class will answer version query and announce 'jabber:iq:version' namespace
-    in the client's disco#info results."""
-    
-    implements(IIqHandlersProvider, IFeaturesProvider)
-
-    def __init__(self, client):
-        """Just remember who created this."""
-        self.client = client
-
-    def get_features(self):
-        """Return namespace which should the client include in its reply to a
-        disco#info query."""
-        return ["jabber:iq:version"]
-
-    def get_iq_get_handlers(self):
-        """Return list of tuples (element_name, namespace, handler) describing
-        handlers of <iq type='get'/> stanzas"""
-        return [
-            ("query", "jabber:iq:version", self.get_version),
-            ]
-
-    def get_iq_set_handlers(self):
-        """Return empty list, as this class provides no <iq type='set'/> stanza handler."""
-        return []
-
-    def get_version(self,iq):
-        """Handler for jabber:iq:version queries.
-
-        jabber:iq:version queries are not supported directly by PyXMPP, so the
-        XML node is accessed directly through the libxml2 API.  This should be
-        used very carefully!"""
-        iq=iq.make_result_response()
-        q=iq.new_query("jabber:iq:version")
-        q.newTextChild(q.ns(),"name","Echo component")
-        q.newTextChild(q.ns(),"version","1.0")
-        return iq
-
-class Client(JabberClient):
-    """Simple bot (client) example. Uses `pyxmpp.jabber.client.JabberClient`
-    class as base. That class provides basic stream setup (including
-    authentication) and Service Discovery server. It also does server address
-    and port discovery based on the JID provided."""
-
-    def __init__(self, jid, password):
-        # if bare JID is provided add a resource -- it is required
-        if not jid.resource:
-            jid=JID(jid.node, jid.domain, "Echobot")
-
-        # setup client with provided connection information
-        # and identity data
-        JabberClient.__init__(self, jid, password,
-                disco_name="PyXMPP example: echo bot", disco_type="bot")
-
-        # add the separate components
-        self.interface_providers = [
-            VersionHandler(self),
-            EchoHandler(self),
-            ]
-
-    def stream_state_changed(self,state,arg):
-        """This one is called when the state of stream connecting the component
-        to a server changes. This will usually be used to let the user
-        know what is going on."""
-        print "*** State changed: %s %r ***" % (state,arg)
+        p=stanza.make_accept_response()
+        self.stream.send(p)
+        return True
 
     def print_roster_item(self,item):
         if item.name:
@@ -214,21 +174,21 @@ class Client(JabberClient):
 
 # XMPP protocol is Unicode-based to properly display data received
 # _must_ convert it to local encoding or UnicodeException may be raised
-locale.setlocale(locale.LC_CTYPE, "")
-encoding = locale.getlocale()[1]
+locale.setlocale(locale.LC_CTYPE,"")
+encoding=locale.getlocale()[1]
 if not encoding:
-    encoding = "us-ascii"
-sys.stdout = codecs.getwriter(encoding)(sys.stdout, errors = "replace")
-sys.stderr = codecs.getwriter(encoding)(sys.stderr, errors = "replace")
+    encoding="us-ascii"
+sys.stdout=codecs.getwriter(encoding)(sys.stdout,errors="replace")
+sys.stderr=codecs.getwriter(encoding)(sys.stderr,errors="replace")
 
 
 # PyXMPP uses `logging` module for its debug output
 # applications should set it up as needed
-logger = logging.getLogger()
+logger=logging.getLogger()
 logger.addHandler(logging.StreamHandler())
 logger.setLevel(logging.INFO) # change to DEBUG for higher verbosity
 
-if len(sys.argv) < 3:
+if len(sys.argv)<3:
     print u"Usage:"
     print "\t%s JID password" % (sys.argv[0],)
     print "example:"
@@ -236,7 +196,7 @@ if len(sys.argv) < 3:
     sys.exit(1)
 
 print u"creating client..."
-c=Client(JID(sys.argv[1]), sys.argv[2])
+c=Client(JID(sys.argv[1]),sys.argv[2])
 
 print u"connecting..."
 c.connect()
